# logmark

./: .gitignore  README.md  main.py  pyproject.toml
src/logmark/: __main__.py  windowing.py
src/logmark/collators/: LogCollator.py  WindowCollator.py
src/logmark/configs/: drain3_default.ini
src/logmark/datasets/: __init__.py  base.py  loghub.py
src/logmark/embedders/: __init__.py  log_base.py  log_baselines.py  utils.py  window_base.py  window_baselines.py
src/logmark/evaluation/: __init__.py  dashboard.py  metrics.py
src/logmark/models/: __init__.py  base.py  isolation_forest.py
src/logmark/parsers/: __init__.py  ael.py  base.py  drain.py  lenma.py  spell.py
tests/embedders/: test_log_baselines.py  test_window_baselines.py
tests/integration/: test_pipelines.py
tests/parsers/: test_parsers.py
