[project]
name = "logmark"
version = "0.1.0"
description = "TODO"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "drain3>=0.9.11",
    "logparser3>=1.0.4",
    "numpy>=2.4.6",
    "polars>=1.0.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
    "transformers>=5.3.0",
]

[project.scripts]
logmark = "logmark.__main__:main"
